--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,14 +76,58 @@ ion-icon {
 }
 
 html {
-    font-family: var(--ff-poppins);
-    scroll-behavior: smooth;
+  font-family: var(--ff-poppins);
+  scroll-behavior: smooth;
 }
 
-body{
-    background: var(--eerie-black);
+body {
+  background: var(--eerie-black);
 }
+
 body.active {
-    overflow: hidden;
-    
+  overflow: hidden;
+}
+
+.container {
+  padding: 15px;
+}
+
+/* -------------------------- */
+/* HEADER
+/* -------------------------- */
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 25px;
+  transition: var(--transition2);
+  z-index: 2;
+}
+
+.header:active {
+  background: var(--eerie-black);
+  padding: 20px;
+}
+
+.header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-actions {
+  display: none;
+}
+
+.btn-mobile ion-icon {
+  font-size: 40px;
+  color: var(--white);
+  cursor: pointer;
+}
+
+button {
+  background: transparent;
+  border: none;
 }
